# qq-bot

./: .env.prod  card_database.db  pyproject.toml
qq-bot/plugins/ai/: __init__.py
qq-bot/plugins/auto_send/: __init__.py
qq-bot/plugins/card/: __init__.py  models.py
qq-bot/plugins/constellation/: __init__.py
qq-bot/plugins/draw/: __init__.py  draw.py
qq-bot/plugins/eat_what/: __init__.py  eat_menu.txt
qq-bot/plugins/fortune_telling/: __init__.py
qq-bot/plugins/menu/: __init__.py
qq-bot/plugins/qr_code/: __init__.py
qq-bot/plugins/some_keywords/: __init__.py  config.py  keyword_list.txt  tools.py
qq-bot/plugins/some_keywords/contents/sb/: text.txt
qq-bot/plugins/some_keywords/contents/二次元/: alias.txt
qq-bot/plugins/some_keywords/contents/原神/: alias.txt  text.txt
qq-bot/plugins/some_keywords/contents/对象/: text.txt
qq-bot/plugins/some_keywords/contents/星期四/: alias.txt
qq-bot/plugins/some_keywords/contents/许哥/: alias.txt
qq-bot/plugins/some_keywords/contents/谁问你了/: alias.txt  text.txt
qq-bot/plugins/special_keywords/: __init__.py
qq-bot/plugins/thursday/: __init__.py
qq-bot/plugins/translate/: __init__.py
qq-bot/plugins/withdraw/: __init__.py
