[project]
name = "qq-bot"
version = "0.1.0"
description = "qq-bot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_apscheduler"]
plugin_dirs = ["qq-bot/plugins"]
builtin_plugins = ["echo"]
